# esp-info-hub

./: .gitignore  README.md  arduino_unit.yaml  bedroom_unit.yaml  cam-esp.yaml  cam_01.yaml  display.yaml  greenhouse_env_unit.yaml  info-hub-node.yaml  info_hub_node.yaml  info_hub_unit.yaml  neopixel_clock.yaml  plant_unit.yaml  plant_waterer_node.yaml  pyproject.toml  test_esp32-cam.yaml  test_unit.yaml  test_unit_recv.yaml  weatherstation.yaml
common/: api.yaml  node_base.yaml  wifi.yaml
custom_components/: nrf24l01_receiver.h  nrf24l01_transmitter.h
esp-cam/: esp-cam.yaml
info-hub/: info-hub-node.yaml
m5stack-atom-matrix/: main.yaml
m5stack-camera-x/: esp32_camera.yaml  main.yaml
plant-waterer/: plant-waterer-node-v2.yaml  plant-waterer-node.yaml  plant_waterer_node.yaml
plant-waterer-docs/: sketch.fzz
plant-waterer/.esphome/: plant_waterer_node.yaml.json
plant-waterer/docs/: sketch.fzz
