[tool.poetry]
name = "esp-at-home"
version = "0.1.0"
description = ""
authors = ["Evgeny <iam@freekode.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
esphome = "^2023.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
